--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "721133982";
+    const serviceWorkerVersion = "1042490078";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -51,6 +51,8 @@
       overflow-y: scroll !important;
       /* Allows verticall scrolling */
       overflow-x: hidden !important;
+      touch-action: pan-y !important;
+      /* Allows vertical scrolling */
       overscroll-behavior: none;
       /* Avoid bouncing scrolling on top/bottom edget */
     }
