--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <!-- <base href="/"> -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,31 +32,57 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>iwikweb</title>
+  <title>IWIK The House Of English</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "947565097";
+    const serviceWorkerVersion = "1513047606";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 
 <body>
-  <style>
-    html {
-      overflow: hidden;
-      width: 100%;
+  <!-- <style>
+    body {
+      height: 500vh !important;
+      /* Bigger than 100% to allow scroll */
+      position: static !important;
+      /* Override absolute from flutter */
+      overflow-y: scroll !important;
+      /* Allows verticall scrolling */
+      overflow-x: hidden !important;
+      touch-action: pan-y !important;
+      /* Allows vertical scrolling */
+      overscroll-behavior: none;
+      /* Avoid bouncing scrolling on top/bottom edget */
     }
 
-    body {
-      height: 100%;
-      position: fixed;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
+    /* Centers flutter canvas with a size of the viewport*/
+    flt-glass-pane {
+      position: fixed !important;
+      /* Overrides absolute from flutter  */
+      top: 50vh !important;
+      left: 50vw !important;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+      transform: translate(-50vw, -50vh) !important;
     }
-  </style>
+
+    /* 
+    Scrollbar hide doesn't work on iOS, they add a default one when overflow:true and  -webkit-overflow-scrolling: touch; 
+    Sadly since iOS 13, this value is forced on iOS -> https://developer.apple.com/documentation/safari-release-notes/safari-13-release-notes
+    */
+    ::-webkit-scrollbar {
+      display: false;
+      width: 0px;
+      height: 0px;
+      /* Remove scrollbar space */
+      background: transparent;
+      /* Optional: just make scrollbar invisible */
+    }
+  </style> -->
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
@@ -63,12 +91,38 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
+          engineInitializer.initializeEngine({
+            hostElement: document.querySelector("#flutter_app"),
+            renderer: "html"
+          }).then(function (appRunner) {
             appRunner.runApp();
           });
         }
       });
     });
+  </script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyA4uH0DoJ-Rb_m_IXMou7_dab7O0Dv_vLo",
+      authDomain: "iwik-5b638.firebaseapp.com",
+      projectId: "iwik-5b638",
+      storageBucket: "iwik-5b638.appspot.com",
+      messagingSenderId: "620388720607",
+      appId: "1:620388720607:web:76fdd5073471b5b666ae6a",
+      measurementId: "G-WFM2D9N05M"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
   </script>
 </body>
 
