--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Internal IWIK management">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="iwikweb">
+  <meta name="apple-mobile-web-app-title" content="cmsiwik">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>iwikweb</title>
+  <title>CMS - IWIK The House Of English</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "1363104257";
+    const serviceWorkerVersion = "3173778108";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -50,15 +51,39 @@
           serviceWorkerVersion: serviceWorkerVersion,
         },
         onEntrypointLoaded: function (engineInitializer) {
-          engineInitializer.initializeEngine().then(function (appRunner) {
+          engineInitializer.initializeEngine({
+            hostElement: document.querySelector("#flutter_app"),
+            renderer: "html"
+          }).then(function (appRunner) {
             appRunner.runApp();
           });
         }
       });
     });
   </script>
+  <!-- <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyA4uH0DoJ-Rb_m_IXMou7_dab7O0Dv_vLo",
+      authDomain: "iwik-5b638.firebaseapp.com",
+      projectId: "iwik-5b638",
+      storageBucket: "iwik-5b638.appspot.com",
+      messagingSenderId: "620388720607",
+      appId: "1:620388720607:web:76fdd5073471b5b666ae6a",
+      measurementId: "G-WFM2D9N05M"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script> -->
 </body>
 
 </html>
-
-<!-- asd -->
